[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/fonts/dynamic/luckiest_guy_size16.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/dynamic/luckiest_guy_size8.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/UI/GameOverlay.gd" type="Script" id=3]
[ext_resource path="res://roda-assets/UI/game/boss_overlay/boss_health_under.png" type="Texture" id=4]
[ext_resource path="res://roda-assets/UI/game/settings_normal.png" type="Texture" id=5]
[ext_resource path="res://roda-assets/UI/game/boss_overlay/boss_health_over.png" type="Texture" id=6]
[ext_resource path="res://src/UI/game/InventoryOverlay.gd" type="Script" id=7]
[ext_resource path="res://roda-assets/UI/game/settings_pressed.png" type="Texture" id=8]
[ext_resource path="res://roda-assets/UI/game/inventory/scroll_up.png" type="Texture" id=9]
[ext_resource path="res://roda-assets/UI/game/inventory/inventory_opened_background.png" type="Texture" id=10]
[ext_resource path="res://roda-assets/UI/game/inventory/inventory_pressed.png" type="Texture" id=11]
[ext_resource path="res://roda-assets/UI/game/inventory/inventory_normal.png" type="Texture" id=12]
[ext_resource path="res://roda-assets/UI/game/inventory/inventory_background.png" type="Texture" id=13]
[ext_resource path="res://roda-assets/UI/game/inventory/scroll_down.png" type="Texture" id=14]
[ext_resource path="res://src/UI/game/SettingsOverlay.gd" type="Script" id=15]
[ext_resource path="res://src/UI/game/ItemSlot.tscn" type="PackedScene" id=16]
[ext_resource path="res://roda-assets/UI/game/boss_overlay/boss_health_progress.png" type="Texture" id=17]
[ext_resource path="res://src/UI/game/BossOverlay.gd" type="Script" id=18]
[ext_resource path="res://assets/materials/smog_fog_material.tres" type="Material" id=19]
[ext_resource path="res://roda-assets/UI/game/inventory/scroll_up_disabled.png" type="Texture" id=20]
[ext_resource path="res://roda-assets/UI/game/inventory/scroll_down_disabled.png" type="Texture" id=21]

[node name="GameOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SmogOverlay" type="ColorRect" parent="."]
material = ExtResource( 19 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsOverlay" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 16
custom_constants/margin_top = 24
custom_constants/margin_left = 16
custom_constants/margin_bottom = 24
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsOverlay"]
margin_left = 16.0
margin_top = 24.0
margin_right = 464.0
margin_bottom = 246.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsOverlay/HBoxContainer"]
margin_right = 32.0
margin_bottom = 222.0
mouse_filter = 2
alignment = 2

[node name="SettingsButton" type="TextureButton" parent="SettingsOverlay/HBoxContainer/VBoxContainer"]
margin_top = 190.0
margin_right = 32.0
margin_bottom = 222.0
rect_min_size = Vector2( 32, 32 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )
expand = true

[node name="Inventory" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Inventory"]
margin_left = 2.0
margin_top = 2.0
margin_right = 478.0
margin_bottom = 268.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Inventory/HBoxContainer"]
margin_left = 406.0
margin_right = 476.0
margin_bottom = 266.0
mouse_filter = 2
size_flags_horizontal = 8
custom_constants/separation = -2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryButton" type="TextureButton" parent="Inventory/HBoxContainer/VBoxContainer"]
margin_right = 70.0
margin_bottom = 70.0
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Inventory/HBoxContainer/VBoxContainer/InventoryButton"]
show_behind_parent = true
margin_left = 2.0
margin_top = 42.0
margin_right = 68.0
margin_bottom = 266.0
mouse_filter = 0
size_flags_horizontal = 4
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Inventory/HBoxContainer/VBoxContainer/InventoryButton"]
show_behind_parent = true
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryVBox" type="VBoxContainer" parent="Inventory/HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 70.0
margin_bottom = 264.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpButton" type="TextureButton" parent="Inventory/HBoxContainer/VBoxContainer/InventoryVBox"]
margin_left = 4.0
margin_right = 66.0
margin_bottom = 14.0
size_flags_horizontal = 4
texture_normal = ExtResource( 9 )
texture_disabled = ExtResource( 20 )

[node name="Slots" type="VBoxContainer" parent="Inventory/HBoxContainer/VBoxContainer/InventoryVBox"]
margin_top = 16.0
margin_right = 70.0
margin_bottom = 180.0
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlotTop" parent="Inventory/HBoxContainer/VBoxContainer/InventoryVBox/Slots" instance=ExtResource( 16 )]
margin_left = 8.0
margin_right = 62.0
margin_bottom = 54.0

[node name="SlotMiddle" parent="Inventory/HBoxContainer/VBoxContainer/InventoryVBox/Slots" instance=ExtResource( 16 )]
margin_left = 8.0
margin_top = 55.0
margin_right = 62.0
margin_bottom = 109.0

[node name="SlotBottom" parent="Inventory/HBoxContainer/VBoxContainer/InventoryVBox/Slots" instance=ExtResource( 16 )]
margin_left = 8.0
margin_top = 110.0
margin_right = 62.0
margin_bottom = 164.0

[node name="DownButton" type="TextureButton" parent="Inventory/HBoxContainer/VBoxContainer/InventoryVBox"]
margin_left = 4.0
margin_top = 182.0
margin_right = 66.0
margin_bottom = 196.0
size_flags_horizontal = 4
texture_normal = ExtResource( 14 )
texture_disabled = ExtResource( 21 )

[node name="Spacer" type="Control" parent="Inventory/HBoxContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 70.0
margin_bottom = 266.0
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 12
custom_constants/margin_left = 20
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 12.0
margin_right = 460.0
margin_bottom = 258.0
mouse_filter = 2

[node name="VersionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_left = 211.0
margin_right = 228.0
margin_bottom = 12.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "v0.0"
align = 1
valign = 1

[node name="BossOverlay" type="MarginContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_top = 20
custom_constants/margin_bottom = 16
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="BossOverlay"]
margin_top = 20.0
margin_right = 480.0
margin_bottom = 254.0
mouse_filter = 2

[node name="NameLabel" type="Label" parent="BossOverlay/VBoxContainer"]
margin_left = 203.0
margin_right = 276.0
margin_bottom = 23.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Mr. Smog"
align = 1

[node name="HealthBar" type="TextureProgress" parent="BossOverlay/VBoxContainer"]
margin_left = 88.0
margin_top = 27.0
margin_right = 392.0
margin_bottom = 47.0
mouse_filter = 2
size_flags_horizontal = 4
value = 50.0
texture_under = ExtResource( 4 )
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 17 )
